@@ -6,12 +6,17 @@ ZODB Requires:
   than in the common Layout remove those 2 widgets from your layout
   and define your layouts in the getCustomDocumentType using
   the 'common' layout
+- in getCustomDocument* properties renaming
+  _expression_str -> _expr
+  _str -> ''  
+  ex: default_expression_str -> default_expr
+      acl_write_permission_str -> acl_write_permission
 New features:
 ~~~~~~~~~~~~~
 - refactoring all documents definition using common schema/layout
-  WARNING News document schema is updated and not using anymore longTitle 
+  WARNING News document schema is updated and not using anymore longTitle
   so data may be lost
-- Metadata that make sense are duplicated in edition 
+- Metadata that make sense are duplicated in edition
   ex Source and Rights for Image and File
 - #254: DublinCore full implementation with Coverage, Source and Relation
 - Metadata Contributors is computed automaticly by adding editors
@@ -20,10 +25,12 @@ New features:
   backward compatibility is done using cpsdocument_installer
 - Implementation of a tooltip mechanism : an help button toggles the appearence
   of tooltips, and clicking on tooltips dismisses them
- 
 Bug fixes:
 ~~~~~~~~~~
 - no way to enable/disable discussion on a document
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - new getAdditionalContentInfo proxy param
+- renaming properties that ending with '_str' and using '_c' for computed attribute
+  _expression_str -> _expr, _expression -> _expr_c
+  whatever_str -> whatever, whatever -> whatever_c
